Add UserController
